k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: texture-pack-downloader
  labels:
    app: texture-pack-downloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: texture-pack-downloader
  template:
    metadata:
      labels:
        app: texture-pack-downloader
    spec:
      containers:
      - name: app
        image: ghcr.io/countxd/texture-pack-downloader:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
