k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: texture-pack-downloader
spec:
  selector:
    app: texture-pack-downloader
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30888
  type: NodePort
